# fps

./: .gitignore  Cargo.toml  justfile  readme.md
assets_src/blender/: plane.blend
raidillon_core/: Cargo.toml
raidillon_core/src/: assets.rs  engine.rs  events.rs  lib.rs  systems.rs  time.rs
raidillon_ecs/: Cargo.toml
raidillon_ecs/src/: lib.rs
raidillon_game/: Cargo.toml
raidillon_game/src/: engine.rs  game_state.rs  lib.rs  main.rs  main_clean.rs
raidillon_input/: Cargo.toml
raidillon_input/src/: camera.rs  camera_system.rs  input_system.rs  lib.rs
raidillon_physics/: Cargo.toml
raidillon_physics/src/: lib.rs
raidillon_render/: Cargo.toml
raidillon_render/src/: debug.rs  ecs_renderer.rs  gltf_loader.rs  lib.rs  model.rs  render.rs  render_system.rs  window.rs
raidillon_ui/: Cargo.toml
raidillon_ui/src/: lib.rs  ui.rs
resources/: uvsphere2.gltf
resources/models/: monkey-smooth.gltf  plane.gltf  tree.gltf  uvsphere-smooth.gltf  uvsphere.gltf
resources/shaders/: gl_solid_color.frag  gl_solid_color.vert  gl_textured.frag  gl_textured.vert  skybox.frag  skybox.vert
src/: camera.rs  ecs.rs  gltf_loader.rs  main.rs  model.rs  physics.rs  render.rs  time.rs  ui.rs
