[package]
name = "raidillon_render"
version = "0.1.0"
edition = "2021"

[dependencies]
glam   = "0.30.4"
image  = "0.25"
anyhow = "1"
hecs = "0.10.5"
glium = { version = "0.35", features = ["glutin"] }
winit = "0.30"
raidillon_ecs = { path = "../raidillon_ecs" }
rapier3d = "0.26.1"
gltf = { version = "1.4.1", features = ["import", "utils", "KHR_texture_transform"] }
