[package]
name = "raidillon_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.12"
imgui-winit-support = "0.13"
imgui-glium-renderer = "0.13"
raidillon_render = { path = "../raidillon_render" }
anyhow = "1"
winit = "0.30"
rapier3d = "0.26.1"
glium = { version = "0.35", features=["glutin"] }
